--- a/FestivalApplication/FestivalApplication/FestivalApplication.csproj
+++ b/FestivalApplication/FestivalApplication/FestivalApplication.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Migrations\20210927111644_InitialDBCreation.cs" />
-    <Compile Include="Migrations\20210927111644_InitialDBCreation.Designer.cs" />
+    <Compile Include="Migrations\20210928100833_added Playlist History-Future.cs" />
+    <Compile Include="Migrations\20210928100833_added Playlist History-Future.Designer.cs" />
     <Compile Include="Migrations\DBContextModelSnapshot.cs" />
   </ItemGroup>
 
