--- a/FestivalApplication/FestivalApplication/FestivalApplication.csproj
+++ b/FestivalApplication/FestivalApplication/FestivalApplication.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Migrations\20210930092518_Database Updated.cs" />
-    <Compile Include="Migrations\20210930092518_Database Updated.Designer.cs" />
+    <Compile Include="Migrations\20210930132606_eersteMigration.cs" />
+    <Compile Include="Migrations\20210930132606_eersteMigration.Designer.cs" />
     <Compile Include="Migrations\DBContextModelSnapshot.cs" />
   </ItemGroup>
 
