--- a/FestivalApplication/FestivalApplication/FestivalApplication.csproj
+++ b/FestivalApplication/FestivalApplication/FestivalApplication.csproj
@@ -13,14 +13,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Migrations\20211005133853_Initial.cs" />
-    <Compile Include="Migrations\20211005133853_Initial.Designer.cs" />
+    <Compile Include="Migrations\20211008132703_PenaltyV1.0.cs" />
+    <Compile Include="Migrations\20211008132703_PenaltyV1.0.Designer.cs" />
     <Compile Include="Migrations\DBContextModelSnapshot.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.9">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
