--- a/FestivalApplication/FestivalApplication/appsettings.Development.json
+++ b/FestivalApplication/FestivalApplication/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBContext": "server=LocalHost;user id=root;persistsecurityinfo=True;database=festivaldatabase;sslmode=None;"
+    "DBContext": "datasource=127.0.0.1;port=3306;username=root;password=;database=festivaldatabase;sslmode=none;"
 
   }
 }
