--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /FestivalApplication/FestivalApplication/appsettings.Developement.json
+/FestivalApplication/FestivalApplication/appsettings.Development.json
