--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 
 /FestivalApplication/FestivalApplication/appsettings.Developement.json
 /FestivalApplication/FestivalApplication/appsettings.Development.json
+/FestivalApplication/appsettings.Development.json
